--- a/ui/infoUI.ui
+++ b/ui/infoUI.ui
@@ -6,312 +6,245 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>760</width>
-    <height>560</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>760</width>
-    <height>560</height>
+    <width>800</width>
+    <height>600</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>760</width>
-    <height>560</height>
+    <width>800</width>
+    <height>600</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="label_name">
-   <property name="geometry">
-    <rect>
-     <x>530</x>
-     <y>70</y>
-     <width>71</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>请输入姓名：</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_class">
-   <property name="geometry">
-    <rect>
-     <x>530</x>
-     <y>100</y>
-     <width>71</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>请输入班级：</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_id">
-   <property name="geometry">
-    <rect>
-     <x>530</x>
-     <y>40</y>
-     <width>71</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>请输入学号：</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="bt_change_info">
-   <property name="geometry">
-    <rect>
-     <x>310</x>
-     <y>510</y>
-     <width>211</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>添加或修改信息(DB)</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="bt_start_collect">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>460</y>
-     <width>131</width>
-     <height>91</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>开始采集</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_title">
-   <property name="geometry">
-    <rect>
-     <x>170</x>
-     <y>10</y>
-     <width>251</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>人脸识别个人信息采集系统</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="bt_check_info">
-   <property name="geometry">
-    <rect>
-     <x>310</x>
-     <y>460</y>
-     <width>101</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>查询信息（DB）</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_sex">
-   <property name="geometry">
-    <rect>
-     <x>530</x>
-     <y>130</y>
-     <width>71</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>请输入性别：</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_birth">
-   <property name="geometry">
-    <rect>
-     <x>530</x>
-     <y>160</y>
-     <width>71</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>请输入生日：</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_capture">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>500</width>
-     <height>400</height>
-    </rect>
-   </property>
-   <property name="minimumSize">
-    <size>
-     <width>500</width>
-     <height>400</height>
-    </size>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>500</width>
-     <height>400</height>
-    </size>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="bt_take_photo">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>510</y>
-     <width>151</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>拍照</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_id">
-   <property name="geometry">
-    <rect>
-     <x>610</x>
-     <y>40</y>
-     <width>141</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_name">
-   <property name="geometry">
-    <rect>
-     <x>610</x>
-     <y>70</y>
-     <width>141</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_class">
-   <property name="geometry">
-    <rect>
-     <x>610</x>
-     <y>100</y>
-     <width>141</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_sex">
-   <property name="geometry">
-    <rect>
-     <x>610</x>
-     <y>130</y>
-     <width>141</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_birth">
-   <property name="geometry">
-    <rect>
-     <x>610</x>
-     <y>160</y>
-     <width>141</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QTableView" name="tableView">
-   <property name="geometry">
-    <rect>
-     <x>530</x>
-     <y>190</y>
-     <width>221</width>
-     <height>291</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLCDNumber" name="lcdNumber_collection_nums">
-   <property name="geometry">
-    <rect>
-     <x>230</x>
-     <y>470</y>
-     <width>71</width>
-     <height>31</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_collected">
-   <property name="geometry">
-    <rect>
-     <x>260</x>
-     <y>450</y>
-     <width>41</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>已采集</string>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="spinBox_set_num">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>471</y>
-     <width>71</width>
-     <height>31</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QCheckBox" name="checkBox_auto_collect">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>450</y>
-     <width>71</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string> 自动采集</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="bt_check_id_faces">
-   <property name="geometry">
-    <rect>
-     <x>420</x>
-     <y>460</y>
-     <width>101</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>查询人脸数量</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="bt_check_dirs_faces">
-   <property name="geometry">
-    <rect>
-     <x>530</x>
-     <y>490</y>
-     <width>221</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>查询数据中所有人脸数量</string>
-   </property>
-  </widget>
+  <layout class="QVBoxLayout" name="verticalLayout_5">
+   <item>
+    <widget class="QLabel" name="label_title">
+     <property name="text">
+      <string>个人信息采集</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_4">
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout_4">
+       <item>
+        <widget class="QLabel" name="label_capture">
+         <property name="minimumSize">
+          <size>
+           <width>500</width>
+           <height>400</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>500</width>
+           <height>400</height>
+          </size>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <item>
+          <widget class="QPushButton" name="bt_start_collect">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>100</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>100</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>开始采集</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout_2">
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout">
+             <item>
+              <widget class="QCheckBox" name="checkBox_auto_collect">
+               <property name="text">
+                <string> 自动采集</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLabel" name="label_collected">
+               <property name="text">
+                <string>已采集</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_2">
+             <item>
+              <widget class="QSpinBox" name="spinBox_set_num">
+               <property name="minimumSize">
+                <size>
+                 <width>70</width>
+                 <height>30</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>70</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLCDNumber" name="lcdNumber_collection_nums"/>
+             </item>
+            </layout>
+           </item>
+           <item>
+            <widget class="QPushButton" name="bt_take_photo">
+             <property name="minimumSize">
+              <size>
+               <width>149</width>
+               <height>40</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>150</width>
+               <height>40</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>拍照</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout_3">
+           <item>
+            <widget class="QPushButton" name="bt_check_info">
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>40</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>查询信息（DB）</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="bt_change_info">
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>40</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>添加或修改信息(DB)</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QLabel" name="label_id">
+         <property name="text">
+          <string>请输入学号：</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="lineEdit_id"/>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_name">
+         <property name="text">
+          <string>请输入姓名：</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="lineEdit_name"/>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_class">
+         <property name="text">
+          <string>请输入班级：</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="lineEdit_class"/>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_sex">
+         <property name="text">
+          <string>请输入性别：</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="lineEdit_sex"/>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_birth">
+         <property name="text">
+          <string>请输入生日：</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="lineEdit_birth"/>
+       </item>
+       <item>
+        <widget class="QTableView" name="tableView"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="bt_check_dirs_faces">
+         <property name="text">
+          <string>查询数据中所有人脸数量</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </item>
+  </layout>
   <zorder>label_name</zorder>
   <zorder>label_class</zorder>
   <zorder>label_id</zorder>
@@ -333,7 +266,6 @@
   <zorder>label_collected</zorder>
   <zorder>spinBox_set_num</zorder>
   <zorder>checkBox_auto_collect</zorder>
-  <zorder>bt_check_id_faces</zorder>
   <zorder>bt_check_dirs_faces</zorder>
  </widget>
  <tabstops>
@@ -342,13 +274,8 @@
   <tabstop>spinBox_set_num</tabstop>
   <tabstop>bt_take_photo</tabstop>
   <tabstop>lineEdit_id</tabstop>
-  <tabstop>lineEdit_name</tabstop>
-  <tabstop>lineEdit_class</tabstop>
-  <tabstop>lineEdit_sex</tabstop>
-  <tabstop>lineEdit_birth</tabstop>
   <tabstop>bt_check_info</tabstop>
   <tabstop>bt_change_info</tabstop>
-  <tabstop>bt_check_id_faces</tabstop>
   <tabstop>tableView</tabstop>
   <tabstop>bt_check_dirs_faces</tabstop>
  </tabstops>
